// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: StatisticsSelect should render with ASI props 1`] = `
<StatisticsSelect
  editBase={false}
  limit={2}
  path="character.statistics"
  setState={[Function]}
  type="ability_score"
  uuid="mock-uuid-asi-1"
>
  <ListDataStatsBlock
    budget={27}
    editBase={false}
    increase={2}
    manualChange={[Function]}
    maxBare={15}
    minBare={8}
    path="character.statistics"
    setState={[Function]}
  >
    <StatsBlock
      bare={Object {}}
      base={Object {}}
      bonus={Object {}}
      budget={27}
      editBase={false}
      increase={2}
      manualChange={[Function]}
      maxBare={15}
      minBare={8}
      modifiers={Object {}}
      path="character.statistics"
      setState={[Function]}
      statistics={
        Array [
          Object {
            "description": "Str",
            "id": "strength",
            "name": "Strength",
            "type": "statistics",
          },
          Object {
            "description": "Dex",
            "id": "dexterity",
            "name": "Dexterity",
            "type": "statistics",
          },
          Object {
            "description": "Con",
            "id": "constitution",
            "name": "Constitution",
            "type": "statistics",
          },
          Object {
            "description": "Int",
            "id": "intelligence",
            "name": "Intelligence",
            "type": "statistics",
          },
          Object {
            "description": "Wis",
            "id": "wisdom",
            "name": "Wisdom",
            "type": "statistics",
          },
          Object {
            "description": "Char",
            "id": "charisma",
            "name": "Charisma",
            "type": "statistics",
          },
        ]
      }
    >
      <table
        className="nice-table stats-block condensed bordered"
      >
        <thead>
          <tr>
            <th>
              Statistic
            </th>
            <th
              className="text-align-center"
            >
              Base
            </th>
            <th
              className="text-align-center"
              colSpan={2}
            >
              Increase
            </th>
            <th
              className="text-align-center"
            >
              Final
            </th>
            <th
              className="text-align-center"
            >
              Modifier
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            className="text-align-center"
            key="strength"
          >
            <th>
              Strength
            </th>
            <td />
            <td
              key="strength-0"
            >
              <input
                checked={false}
                disabled={false}
                name="radio-0"
                onChange={[Function]}
                type="radio"
              />
            </td>
            <td
              key="strength-1"
            >
              <input
                checked={false}
                disabled={false}
                name="radio-1"
                onChange={[Function]}
                type="radio"
              />
            </td>
            <td />
            <td>
              <Bonus>
                <div
                  className="bonus inline"
                >
                  —
                </div>
              </Bonus>
            </td>
          </tr>
          <tr
            className="text-align-center"
            key="dexterity"
          >
            <th>
              Dexterity
            </th>
            <td />
            <td
              key="dexterity-0"
            >
              <input
                checked={false}
                disabled={false}
                name="radio-0"
                onChange={[Function]}
                type="radio"
              />
            </td>
            <td
              key="dexterity-1"
            >
              <input
                checked={false}
                disabled={false}
                name="radio-1"
                onChange={[Function]}
                type="radio"
              />
            </td>
            <td />
            <td>
              <Bonus>
                <div
                  className="bonus inline"
                >
                  —
                </div>
              </Bonus>
            </td>
          </tr>
          <tr
            className="text-align-center"
            key="constitution"
          >
            <th>
              Constitution
            </th>
            <td />
            <td
              key="constitution-0"
            >
              <input
                checked={false}
                disabled={false}
                name="radio-0"
                onChange={[Function]}
                type="radio"
              />
            </td>
            <td
              key="constitution-1"
            >
              <input
                checked={false}
                disabled={false}
                name="radio-1"
                onChange={[Function]}
                type="radio"
              />
            </td>
            <td />
            <td>
              <Bonus>
                <div
                  className="bonus inline"
                >
                  —
                </div>
              </Bonus>
            </td>
          </tr>
          <tr
            className="text-align-center"
            key="intelligence"
          >
            <th>
              Intelligence
            </th>
            <td />
            <td
              key="intelligence-0"
            >
              <input
                checked={false}
                disabled={false}
                name="radio-0"
                onChange={[Function]}
                type="radio"
              />
            </td>
            <td
              key="intelligence-1"
            >
              <input
                checked={false}
                disabled={false}
                name="radio-1"
                onChange={[Function]}
                type="radio"
              />
            </td>
            <td />
            <td>
              <Bonus>
                <div
                  className="bonus inline"
                >
                  —
                </div>
              </Bonus>
            </td>
          </tr>
          <tr
            className="text-align-center"
            key="wisdom"
          >
            <th>
              Wisdom
            </th>
            <td />
            <td
              key="wisdom-0"
            >
              <input
                checked={false}
                disabled={false}
                name="radio-0"
                onChange={[Function]}
                type="radio"
              />
            </td>
            <td
              key="wisdom-1"
            >
              <input
                checked={false}
                disabled={false}
                name="radio-1"
                onChange={[Function]}
                type="radio"
              />
            </td>
            <td />
            <td>
              <Bonus>
                <div
                  className="bonus inline"
                >
                  —
                </div>
              </Bonus>
            </td>
          </tr>
          <tr
            className="text-align-center"
            key="charisma"
          >
            <th>
              Charisma
            </th>
            <td />
            <td
              key="charisma-0"
            >
              <input
                checked={false}
                disabled={false}
                name="radio-0"
                onChange={[Function]}
                type="radio"
              />
            </td>
            <td
              key="charisma-1"
            >
              <input
                checked={false}
                disabled={false}
                name="radio-1"
                onChange={[Function]}
                type="radio"
              />
            </td>
            <td />
            <td>
              <Bonus>
                <div
                  className="bonus inline"
                >
                  —
                </div>
              </Bonus>
            </td>
          </tr>
        </tbody>
      </table>
    </StatsBlock>
  </ListDataStatsBlock>
</StatisticsSelect>
`;

exports[`Component: StatisticsSelect should render with base stats props 1`] = `
<StatisticsSelect
  editBase={true}
  limit={0}
  maxBare={10}
  minBare={10}
  path="character.statistics"
  setState={[Function]}
  type="statistics"
  uuid="mock-uuid-stats-1"
>
  <ListDataStatsBlock
    budget={27}
    editBase={true}
    increase={0}
    manualChange={[Function]}
    maxBare={10}
    minBare={10}
    path="character.statistics"
    setState={[Function]}
  >
    <StatsBlock
      bare={Object {}}
      base={Object {}}
      bonus={Object {}}
      budget={27}
      editBase={true}
      increase={0}
      manualChange={[Function]}
      maxBare={10}
      minBare={10}
      modifiers={Object {}}
      path="character.statistics"
      setState={[Function]}
      statistics={
        Array [
          Object {
            "description": "Str",
            "id": "strength",
            "name": "Strength",
            "type": "statistics",
          },
          Object {
            "description": "Dex",
            "id": "dexterity",
            "name": "Dexterity",
            "type": "statistics",
          },
          Object {
            "description": "Con",
            "id": "constitution",
            "name": "Constitution",
            "type": "statistics",
          },
          Object {
            "description": "Int",
            "id": "intelligence",
            "name": "Intelligence",
            "type": "statistics",
          },
          Object {
            "description": "Wis",
            "id": "wisdom",
            "name": "Wisdom",
            "type": "statistics",
          },
          Object {
            "description": "Char",
            "id": "charisma",
            "name": "Charisma",
            "type": "statistics",
          },
        ]
      }
    >
      <table
        className="nice-table stats-block condensed bordered"
      >
        <thead>
          <tr>
            <th>
              Statistic
            </th>
            <th
              className="text-align-center"
            >
              Base
            </th>
            <th
              className="text-align-center"
            >
              Modifier
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            className="text-align-center"
            key="strength"
          >
            <th>
              Strength
            </th>
            <td>
              <SingleSelect
                defaultValue={8}
                description="Str"
                heading="Strength"
                isDisabled={[Function]}
                items={
                  Array [
                    Object {
                      "id": 10,
                      "name": 10,
                    },
                  ]
                }
                objects={false}
                renderEmpty={null}
                selected={null}
                setState={[Function]}
              >
                <OnClickOutside(BaseSelect)
                  description="Str"
                  eventTypes={
                    Array [
                      "mousedown",
                      "touchstart",
                    ]
                  }
                  excludeScrollbar={false}
                  heading="Strength"
                  outsideClickIgnoreClass="ignore-react-onclickoutside"
                  preventDefault={false}
                  stopPropagation={false}
                >
                  <BaseSelect
                    className={null}
                    closeOnClick={true}
                    description="Str"
                    disableOnClickOutside={[Function]}
                    disabled={false}
                    enableOnClickOutside={[Function]}
                    eventTypes={
                      Array [
                        "mousedown",
                        "touchstart",
                      ]
                    }
                    heading="Strength"
                    label=""
                    outsideClickIgnoreClass="ignore-react-onclickoutside"
                    preventDefault={false}
                    stopPropagation={false}
                  >
                    <div
                      className="nice-dropdown nice-form-control"
                    >
                      <SelectButton
                        disabled={false}
                        label=""
                        onToggle={[Function]}
                      >
                        <button
                          className="nice-btn"
                          disabled={false}
                          onClick={[Function]}
                        >
                          <i
                            className="icon fa-angle-down"
                          />
                        </button>
                      </SelectButton>
                      <ul
                        className="dropdown-menu"
                        onClick={[Function]}
                      >
                        <li
                          className="heading"
                        >
                          <span>
                            Strength
                          </span>
                        </li>
                        <li
                          className="description"
                        >
                          <span>
                            Str
                          </span>
                        </li>
                        <SelectItem
                          disabled={false}
                          id={10}
                          key="10"
                          name={10}
                          onClick={[Function]}
                          selected={false}
                        >
                          <li
                            className={null}
                            data-value={10}
                            onClick={[Function]}
                          >
                            <a>
                              10
                            </a>
                          </li>
                        </SelectItem>
                      </ul>
                    </div>
                  </BaseSelect>
                </OnClickOutside(BaseSelect)>
              </SingleSelect>
            </td>
            <td>
              <Bonus>
                <div
                  className="bonus inline"
                >
                  —
                </div>
              </Bonus>
            </td>
          </tr>
          <tr
            className="text-align-center"
            key="dexterity"
          >
            <th>
              Dexterity
            </th>
            <td>
              <SingleSelect
                defaultValue={8}
                description="Dex"
                heading="Dexterity"
                isDisabled={[Function]}
                items={
                  Array [
                    Object {
                      "id": 10,
                      "name": 10,
                    },
                  ]
                }
                objects={false}
                renderEmpty={null}
                selected={null}
                setState={[Function]}
              >
                <OnClickOutside(BaseSelect)
                  description="Dex"
                  eventTypes={
                    Array [
                      "mousedown",
                      "touchstart",
                    ]
                  }
                  excludeScrollbar={false}
                  heading="Dexterity"
                  outsideClickIgnoreClass="ignore-react-onclickoutside"
                  preventDefault={false}
                  stopPropagation={false}
                >
                  <BaseSelect
                    className={null}
                    closeOnClick={true}
                    description="Dex"
                    disableOnClickOutside={[Function]}
                    disabled={false}
                    enableOnClickOutside={[Function]}
                    eventTypes={
                      Array [
                        "mousedown",
                        "touchstart",
                      ]
                    }
                    heading="Dexterity"
                    label=""
                    outsideClickIgnoreClass="ignore-react-onclickoutside"
                    preventDefault={false}
                    stopPropagation={false}
                  >
                    <div
                      className="nice-dropdown nice-form-control"
                    >
                      <SelectButton
                        disabled={false}
                        label=""
                        onToggle={[Function]}
                      >
                        <button
                          className="nice-btn"
                          disabled={false}
                          onClick={[Function]}
                        >
                          <i
                            className="icon fa-angle-down"
                          />
                        </button>
                      </SelectButton>
                      <ul
                        className="dropdown-menu"
                        onClick={[Function]}
                      >
                        <li
                          className="heading"
                        >
                          <span>
                            Dexterity
                          </span>
                        </li>
                        <li
                          className="description"
                        >
                          <span>
                            Dex
                          </span>
                        </li>
                        <SelectItem
                          disabled={false}
                          id={10}
                          key="10"
                          name={10}
                          onClick={[Function]}
                          selected={false}
                        >
                          <li
                            className={null}
                            data-value={10}
                            onClick={[Function]}
                          >
                            <a>
                              10
                            </a>
                          </li>
                        </SelectItem>
                      </ul>
                    </div>
                  </BaseSelect>
                </OnClickOutside(BaseSelect)>
              </SingleSelect>
            </td>
            <td>
              <Bonus>
                <div
                  className="bonus inline"
                >
                  —
                </div>
              </Bonus>
            </td>
          </tr>
          <tr
            className="text-align-center"
            key="constitution"
          >
            <th>
              Constitution
            </th>
            <td>
              <SingleSelect
                defaultValue={8}
                description="Con"
                heading="Constitution"
                isDisabled={[Function]}
                items={
                  Array [
                    Object {
                      "id": 10,
                      "name": 10,
                    },
                  ]
                }
                objects={false}
                renderEmpty={null}
                selected={null}
                setState={[Function]}
              >
                <OnClickOutside(BaseSelect)
                  description="Con"
                  eventTypes={
                    Array [
                      "mousedown",
                      "touchstart",
                    ]
                  }
                  excludeScrollbar={false}
                  heading="Constitution"
                  outsideClickIgnoreClass="ignore-react-onclickoutside"
                  preventDefault={false}
                  stopPropagation={false}
                >
                  <BaseSelect
                    className={null}
                    closeOnClick={true}
                    description="Con"
                    disableOnClickOutside={[Function]}
                    disabled={false}
                    enableOnClickOutside={[Function]}
                    eventTypes={
                      Array [
                        "mousedown",
                        "touchstart",
                      ]
                    }
                    heading="Constitution"
                    label=""
                    outsideClickIgnoreClass="ignore-react-onclickoutside"
                    preventDefault={false}
                    stopPropagation={false}
                  >
                    <div
                      className="nice-dropdown nice-form-control"
                    >
                      <SelectButton
                        disabled={false}
                        label=""
                        onToggle={[Function]}
                      >
                        <button
                          className="nice-btn"
                          disabled={false}
                          onClick={[Function]}
                        >
                          <i
                            className="icon fa-angle-down"
                          />
                        </button>
                      </SelectButton>
                      <ul
                        className="dropdown-menu"
                        onClick={[Function]}
                      >
                        <li
                          className="heading"
                        >
                          <span>
                            Constitution
                          </span>
                        </li>
                        <li
                          className="description"
                        >
                          <span>
                            Con
                          </span>
                        </li>
                        <SelectItem
                          disabled={false}
                          id={10}
                          key="10"
                          name={10}
                          onClick={[Function]}
                          selected={false}
                        >
                          <li
                            className={null}
                            data-value={10}
                            onClick={[Function]}
                          >
                            <a>
                              10
                            </a>
                          </li>
                        </SelectItem>
                      </ul>
                    </div>
                  </BaseSelect>
                </OnClickOutside(BaseSelect)>
              </SingleSelect>
            </td>
            <td>
              <Bonus>
                <div
                  className="bonus inline"
                >
                  —
                </div>
              </Bonus>
            </td>
          </tr>
          <tr
            className="text-align-center"
            key="intelligence"
          >
            <th>
              Intelligence
            </th>
            <td>
              <SingleSelect
                defaultValue={8}
                description="Int"
                heading="Intelligence"
                isDisabled={[Function]}
                items={
                  Array [
                    Object {
                      "id": 10,
                      "name": 10,
                    },
                  ]
                }
                objects={false}
                renderEmpty={null}
                selected={null}
                setState={[Function]}
              >
                <OnClickOutside(BaseSelect)
                  description="Int"
                  eventTypes={
                    Array [
                      "mousedown",
                      "touchstart",
                    ]
                  }
                  excludeScrollbar={false}
                  heading="Intelligence"
                  outsideClickIgnoreClass="ignore-react-onclickoutside"
                  preventDefault={false}
                  stopPropagation={false}
                >
                  <BaseSelect
                    className={null}
                    closeOnClick={true}
                    description="Int"
                    disableOnClickOutside={[Function]}
                    disabled={false}
                    enableOnClickOutside={[Function]}
                    eventTypes={
                      Array [
                        "mousedown",
                        "touchstart",
                      ]
                    }
                    heading="Intelligence"
                    label=""
                    outsideClickIgnoreClass="ignore-react-onclickoutside"
                    preventDefault={false}
                    stopPropagation={false}
                  >
                    <div
                      className="nice-dropdown nice-form-control"
                    >
                      <SelectButton
                        disabled={false}
                        label=""
                        onToggle={[Function]}
                      >
                        <button
                          className="nice-btn"
                          disabled={false}
                          onClick={[Function]}
                        >
                          <i
                            className="icon fa-angle-down"
                          />
                        </button>
                      </SelectButton>
                      <ul
                        className="dropdown-menu"
                        onClick={[Function]}
                      >
                        <li
                          className="heading"
                        >
                          <span>
                            Intelligence
                          </span>
                        </li>
                        <li
                          className="description"
                        >
                          <span>
                            Int
                          </span>
                        </li>
                        <SelectItem
                          disabled={false}
                          id={10}
                          key="10"
                          name={10}
                          onClick={[Function]}
                          selected={false}
                        >
                          <li
                            className={null}
                            data-value={10}
                            onClick={[Function]}
                          >
                            <a>
                              10
                            </a>
                          </li>
                        </SelectItem>
                      </ul>
                    </div>
                  </BaseSelect>
                </OnClickOutside(BaseSelect)>
              </SingleSelect>
            </td>
            <td>
              <Bonus>
                <div
                  className="bonus inline"
                >
                  —
                </div>
              </Bonus>
            </td>
          </tr>
          <tr
            className="text-align-center"
            key="wisdom"
          >
            <th>
              Wisdom
            </th>
            <td>
              <SingleSelect
                defaultValue={8}
                description="Wis"
                heading="Wisdom"
                isDisabled={[Function]}
                items={
                  Array [
                    Object {
                      "id": 10,
                      "name": 10,
                    },
                  ]
                }
                objects={false}
                renderEmpty={null}
                selected={null}
                setState={[Function]}
              >
                <OnClickOutside(BaseSelect)
                  description="Wis"
                  eventTypes={
                    Array [
                      "mousedown",
                      "touchstart",
                    ]
                  }
                  excludeScrollbar={false}
                  heading="Wisdom"
                  outsideClickIgnoreClass="ignore-react-onclickoutside"
                  preventDefault={false}
                  stopPropagation={false}
                >
                  <BaseSelect
                    className={null}
                    closeOnClick={true}
                    description="Wis"
                    disableOnClickOutside={[Function]}
                    disabled={false}
                    enableOnClickOutside={[Function]}
                    eventTypes={
                      Array [
                        "mousedown",
                        "touchstart",
                      ]
                    }
                    heading="Wisdom"
                    label=""
                    outsideClickIgnoreClass="ignore-react-onclickoutside"
                    preventDefault={false}
                    stopPropagation={false}
                  >
                    <div
                      className="nice-dropdown nice-form-control"
                    >
                      <SelectButton
                        disabled={false}
                        label=""
                        onToggle={[Function]}
                      >
                        <button
                          className="nice-btn"
                          disabled={false}
                          onClick={[Function]}
                        >
                          <i
                            className="icon fa-angle-down"
                          />
                        </button>
                      </SelectButton>
                      <ul
                        className="dropdown-menu"
                        onClick={[Function]}
                      >
                        <li
                          className="heading"
                        >
                          <span>
                            Wisdom
                          </span>
                        </li>
                        <li
                          className="description"
                        >
                          <span>
                            Wis
                          </span>
                        </li>
                        <SelectItem
                          disabled={false}
                          id={10}
                          key="10"
                          name={10}
                          onClick={[Function]}
                          selected={false}
                        >
                          <li
                            className={null}
                            data-value={10}
                            onClick={[Function]}
                          >
                            <a>
                              10
                            </a>
                          </li>
                        </SelectItem>
                      </ul>
                    </div>
                  </BaseSelect>
                </OnClickOutside(BaseSelect)>
              </SingleSelect>
            </td>
            <td>
              <Bonus>
                <div
                  className="bonus inline"
                >
                  —
                </div>
              </Bonus>
            </td>
          </tr>
          <tr
            className="text-align-center"
            key="charisma"
          >
            <th>
              Charisma
            </th>
            <td>
              <SingleSelect
                defaultValue={8}
                description="Char"
                heading="Charisma"
                isDisabled={[Function]}
                items={
                  Array [
                    Object {
                      "id": 10,
                      "name": 10,
                    },
                  ]
                }
                objects={false}
                renderEmpty={null}
                selected={null}
                setState={[Function]}
              >
                <OnClickOutside(BaseSelect)
                  description="Char"
                  eventTypes={
                    Array [
                      "mousedown",
                      "touchstart",
                    ]
                  }
                  excludeScrollbar={false}
                  heading="Charisma"
                  outsideClickIgnoreClass="ignore-react-onclickoutside"
                  preventDefault={false}
                  stopPropagation={false}
                >
                  <BaseSelect
                    className={null}
                    closeOnClick={true}
                    description="Char"
                    disableOnClickOutside={[Function]}
                    disabled={false}
                    enableOnClickOutside={[Function]}
                    eventTypes={
                      Array [
                        "mousedown",
                        "touchstart",
                      ]
                    }
                    heading="Charisma"
                    label=""
                    outsideClickIgnoreClass="ignore-react-onclickoutside"
                    preventDefault={false}
                    stopPropagation={false}
                  >
                    <div
                      className="nice-dropdown nice-form-control"
                    >
                      <SelectButton
                        disabled={false}
                        label=""
                        onToggle={[Function]}
                      >
                        <button
                          className="nice-btn"
                          disabled={false}
                          onClick={[Function]}
                        >
                          <i
                            className="icon fa-angle-down"
                          />
                        </button>
                      </SelectButton>
                      <ul
                        className="dropdown-menu"
                        onClick={[Function]}
                      >
                        <li
                          className="heading"
                        >
                          <span>
                            Charisma
                          </span>
                        </li>
                        <li
                          className="description"
                        >
                          <span>
                            Char
                          </span>
                        </li>
                        <SelectItem
                          disabled={false}
                          id={10}
                          key="10"
                          name={10}
                          onClick={[Function]}
                          selected={false}
                        >
                          <li
                            className={null}
                            data-value={10}
                            onClick={[Function]}
                          >
                            <a>
                              10
                            </a>
                          </li>
                        </SelectItem>
                      </ul>
                    </div>
                  </BaseSelect>
                </OnClickOutside(BaseSelect)>
              </SingleSelect>
            </td>
            <td>
              <Bonus>
                <div
                  className="bonus inline"
                >
                  —
                </div>
              </Bonus>
            </td>
          </tr>
          <tr
            className="text-align-center"
            key="budget"
          >
            <th>
              Budget
            </th>
            <td>
              27
            </td>
            <td
              colSpan={2}
            />
          </tr>
        </tbody>
      </table>
    </StatsBlock>
  </ListDataStatsBlock>
</StatisticsSelect>
`;

exports[`Component: StatisticsSelect should render with minimum props 1`] = `
<StatisticsSelect
  editBase={false}
  limit={0}
  path="character.statistics"
  setState={[Function]}
  type="ability_score"
  uuid="mock-uuid-asi-1"
>
  <ListDataStatsBlock
    budget={27}
    editBase={false}
    increase={0}
    manualChange={[Function]}
    maxBare={15}
    minBare={8}
    path="character.statistics"
    setState={[Function]}
  >
    <StatsBlock
      bare={Object {}}
      base={Object {}}
      bonus={Object {}}
      budget={27}
      editBase={false}
      increase={0}
      manualChange={[Function]}
      maxBare={15}
      minBare={8}
      modifiers={Object {}}
      path="character.statistics"
      setState={[Function]}
      statistics={
        Array [
          Object {
            "description": "Str",
            "id": "strength",
            "name": "Strength",
            "type": "statistics",
          },
          Object {
            "description": "Dex",
            "id": "dexterity",
            "name": "Dexterity",
            "type": "statistics",
          },
          Object {
            "description": "Con",
            "id": "constitution",
            "name": "Constitution",
            "type": "statistics",
          },
          Object {
            "description": "Int",
            "id": "intelligence",
            "name": "Intelligence",
            "type": "statistics",
          },
          Object {
            "description": "Wis",
            "id": "wisdom",
            "name": "Wisdom",
            "type": "statistics",
          },
          Object {
            "description": "Char",
            "id": "charisma",
            "name": "Charisma",
            "type": "statistics",
          },
        ]
      }
    >
      <table
        className="nice-table stats-block condensed bordered"
      >
        <thead>
          <tr>
            <th>
              Statistic
            </th>
            <th
              className="text-align-center"
            >
              Base
            </th>
            <th
              className="text-align-center"
            >
              Modifier
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            className="text-align-center"
            key="strength"
          >
            <th>
              Strength
            </th>
            <td />
            <td>
              <Bonus>
                <div
                  className="bonus inline"
                >
                  —
                </div>
              </Bonus>
            </td>
          </tr>
          <tr
            className="text-align-center"
            key="dexterity"
          >
            <th>
              Dexterity
            </th>
            <td />
            <td>
              <Bonus>
                <div
                  className="bonus inline"
                >
                  —
                </div>
              </Bonus>
            </td>
          </tr>
          <tr
            className="text-align-center"
            key="constitution"
          >
            <th>
              Constitution
            </th>
            <td />
            <td>
              <Bonus>
                <div
                  className="bonus inline"
                >
                  —
                </div>
              </Bonus>
            </td>
          </tr>
          <tr
            className="text-align-center"
            key="intelligence"
          >
            <th>
              Intelligence
            </th>
            <td />
            <td>
              <Bonus>
                <div
                  className="bonus inline"
                >
                  —
                </div>
              </Bonus>
            </td>
          </tr>
          <tr
            className="text-align-center"
            key="wisdom"
          >
            <th>
              Wisdom
            </th>
            <td />
            <td>
              <Bonus>
                <div
                  className="bonus inline"
                >
                  —
                </div>
              </Bonus>
            </td>
          </tr>
          <tr
            className="text-align-center"
            key="charisma"
          >
            <th>
              Charisma
            </th>
            <td />
            <td>
              <Bonus>
                <div
                  className="bonus inline"
                >
                  —
                </div>
              </Bonus>
            </td>
          </tr>
        </tbody>
      </table>
    </StatsBlock>
  </ListDataStatsBlock>
</StatisticsSelect>
`;
